<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_gradient"
    android:orientation="vertical"
    tools:context=".auxiliary.LoginActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="25dp">

        <TextView
            android:id="@+id/LoginTagLine1"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_gravity="start"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/login_tag_1"
            android:textColor="@color/colorfontTagLine"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/LoginTagLine2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/login_tag_2"
            android:textColor="@color/colorfontTagLine"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>


    <android.support.v7.widget.CardView
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:layout_marginTop="30dp"
        android:elevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TextLoginBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="20dp"
                android:text="@string/login_LOGIN"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/TextUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/login_username"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/EditUsernameL"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/colorPrimary"
                android:elevation="2dp"
                android:focusable="true"
                android:inputType="text" />

            <TextView
                android:id="@+id/TextPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="sans-serif"
                android:text="@string/login_password"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/EditPasswordL"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:focusable="true"
                android:background="@color/colorPrimary"
                android:elevation="2dp"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="90dp"
                android:layout_height="36dp"
                android:layout_gravity="bottom"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:background="@color/color_login_btn"
                android:fontFamily="sans-serif"
                android:onClick="onLoginClick"
                android:text="@string/login_LOGIN"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:fontFamily="sans-serif"
                android:paddingTop="5dp"
                android:text="@string/login_ACK"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/TextSignUp"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/login_settings"
            android:elevation="10dp"
            android:gravity="end"
            android:onClick="onSignUp"
            android:paddingStart="50dp"
            android:paddingBottom="36dp"
            app:layout_constraintBaseline_toBaselineOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />
    </RelativeLayout>

</LinearLayout>